--- a/Case0_CSS_Ani_Vari/bom/index.html
+++ b/Case0_CSS_Ani_Vari/bom/index.html
@@ -4,9 +4,11 @@
 	<title>CSS RWD</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="basic.css">
 	<link rel="stylesheet" media="(max-width: 420px)" href="a.css">
 	<link rel="stylesheet" media="(min-width: 421px) and (max-width: 840px)" href="b.css">
 	<link rel="stylesheet" media="(min-width: 841px)" href="c.css">
+	<script src="control.js"></script>
 </head>
 
 <body>
@@ -21,6 +23,8 @@
 		<div class="grid grid3">Grid_3</div>
 		<div class="grid grid4">Grid_4</div>
 	</div>
+	<label>Choose new color</label>
+	<input type="color" id="myColor" onchange="getColor();"/>
 </section>
 
 <footer>
