--- a/Case5_jqm_googlemap/bom/index.html
+++ b/Case5_jqm_googlemap/bom/index.html
@@ -67,7 +67,7 @@
     
     <div data-role="footer">
 	    <h1>2019/12/31 APP課程案例</h1>
-        <h2>1106137225@nkust.edu.tw</h2>
+        <h2>1106137225@nkust.edu.tw、1106137229@nkust.edu.tw</h2>
     </div>
 </div>
 
@@ -110,7 +110,7 @@
     </div>
 
     <div data-role="footer">
-        <h1>2018APP課程案例</h1>
+        <h1>2019/12/31 APP課程案例</h1>
     </div>
 </div>
 
@@ -130,7 +130,7 @@
     </div>
 
     <div data-role="footer">
-        <h1>2018APP課程案例</h1>
+        <h1>2019/12/31 APP課程案例</h1>
     </div>
 </div>
 
@@ -150,7 +150,7 @@
     </div>
 
     <div data-role="footer">
-        <h1>2018APP課程案例</h1>
+        <h1>2019/12/31 APP課程案例</h1>
     </div>
 </div>
 
@@ -170,7 +170,7 @@
     </div>
 
     <div data-role="footer">
-        <h1>2018APP課程案例</h1>
+        <h1>2019/12/31 APP課程案例</h1>
     </div>
 </div>
 
@@ -190,7 +190,7 @@
     </div>
 
     <div data-role="footer">
-        <h1>2018APP課程案例</h1>
+        <h1>2019/12/31 APP課程案例</h1>
     </div>
 </div>
 
@@ -212,7 +212,7 @@
     </div>
 
     <div data-role="footer">
-        <h1>2018APP課程案例</h1>
+        <h1>2019/12/31 APP課程案例</h1>
     </div>
 </div>
 
@@ -234,7 +234,7 @@
     </div>
 
     <div data-role="footer">
-        <h1>2018APP課程案例</h1>
+        <h1>2019/12/31 APP課程案例</h1>
     </div>
 </div>
 
