--- a/Case5_jqm_googlemap/bom/index.html
+++ b/Case5_jqm_googlemap/bom/index.html
@@ -60,9 +60,9 @@
     </div>
     
     <div data-role="main" class="ui-content">
-        <img src="http://www.pwrnewmedia.com/2013/soleil_provence/originalfiles/sun%20icon.png" alt="Smiley face" height="90" width="90"><br>
-        <p>This app example is composed by Sean Lu.</p>
-        <a href="#" class="ui-btn" data-rel="back">Go back</a>
+        <img src="http://www.pwrnewmedia.com/2013/soleil_provence/originalfiles/sun%20icon.png" alt="Smiley face" height="90" width="90" class="center"><br>
+        <p>很努力做點小改變了 QQ 謝謝老師的教導 >_^</p>
+        <a href="#" class="ui-btn" data-rel="back">返回</a>
     </div>
     
     <div data-role="footer">
